# Impactite

./: .gitignore  README.de.md  README.md  README.ru.md  config.yaml  main.py  pyproject.toml  pyvenv.cfg  test_multi_checkbox_real2.py  test_tagindex.py
samples/: .tag_index.db  _README.md  form_add_book.md  form_review_db.md  queries_aggregate.md  queries_basic.md  queries_database.md  test_checkboxes.md  test_formatting.md
samples/books/: 1984.md  Brave_New_World.md  Clean_Code.md  Dune.md  Mistborn.md  Neuromancer.md  Project_Hail_Mary.md  The_Hobbit.md  The_Name_of_the_Wind.md  The_Pragmatic_Programmer.md
samples/reviews/: Dune.md
src/impactite/: __init__.py  app.py  core.py  editor.tcss  i18n.py
