[project]
name = "impactite"
version = "0.1.0"
description = "Markdown notes viewer and manager"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "markdown>=3.5.0",
    "pygments>=2.17.0",
    "pyyaml>=6.0",
    "rich>=13.0.0",
    "textual[syntax]>=0.47.0",
    "ladybug>=0.1.0",
]

[dependency-groups]
dev = []

[project.scripts]
impactite = "impactite.app:main"

[tool.hatch.build.targets.wheel]
packages = ["src/impactite"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
